--- a/styles.css
+++ b/styles.css
@@ -3,6 +3,7 @@
   height: 200px;
   border: 1px solid rgb(12, 95, 190);
   border-radius: 3px;  
+  background-color:rgb(0, 0, 0);
 }
 .fieldset {
   border: none;
